[package]
name = "anymap"
version = "0.12.1"
authors = ["Chris Morgan <me@chrismorgan.info>"]
description = "A safe and convenient store for one value of each type"
documentation = "https://docs.rs/anymap"
#homepage = "https://github.com/chris-morgan/anymap"
repository = "https://github.com/chris-morgan/anymap"
readme = "README.md"
keywords = ["container", "data-structure", "map"]
license = "MIT/Apache-2.0"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs"] }
